--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,16 @@ description         : >-
                       I turn coffee ☕️ into code,
                       use tabs over spaces
                       and never broke production.
-baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
-repository          : dntjr031/dntjr031.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
+baseurl             : ""
+repository          : dntjr031/dntjr031.github.io
 remote_theme        : YoussefRaafatNasry/portfolYOU
 
 
 ### Plugins ###
 plugins:
   - jekyll-include-cache
+  - webrick
+  - jekyll-gist
 
 
 ### Navbar Settings ###
