--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,17 +1,20 @@
-- title: Student, Harvard CS
-  from: 2014
-  to: 2018
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+- title: IT Will에서 Java 교육 이수
+  from: 2020
+  to: 2020
+  description: Java 개발자 양성 과정 수료.
 
-- title: Software Engineer, Google, UK
-  from: 2018
+- title: Student, 학점은행제
+  from: 2020
+  to: 2021
+  description:
+    - 컴퓨터 공학 학사 학위
+
+- title: Software Engineer, HODI.Inc
+  from: 2020
   to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  description:
+    - 전력관련 SI Software Engineer 로 Web Application 개발을 하고 있습니다.<br>
+    - <ul>
+      <li>Frontend - Vue.js Framework를 사용하여 프론트엔드 개발</li>
+      <li>Backend - Spring Boot Framework를 사용하여 Rest API 개발</li>
+      </ul>
